debugging the makefile

--- a/MakefileGtests
+++ b/MakefileGtests
@@ -17,10 +17,12 @@ INCS       	= -I$(INCDIR) -I$(MOCKSDIR)
 #          Compiler Settings
 ####################################################
 DISTRO := $(shell uname -r)
-ifneq (,$(findstr Ubuntu, $(DISTRO)))
-   CC           = g++
-else
+FIND := $(findstring fc14, $(DISTRO))
+#FIND := $(findstring a, a b c)
+ifneq (,$(findstring fc14, $(DISTRO))) # If fedora core. Fedora Core 14 does not have native C++11 support.
    CC         	= /opt/gcc471/bin/g++471
+else
+   CC           = g++
 endif
 
 AR          = ar
@@ -51,6 +53,11 @@ print:
 #	@echo $(OBJECTS)
 #	@echo $(DEPS)
 	@echo $(TEST_DEPS)
+	@echo "\n"
+	@echo $(DISTRO)
+	@echo $(FIND)
+	@echo $(CC)
+	@echo "\n"
 
 #### Main rule --- build the test runner
 all: $(TESTRUNNER)
